--- a/package.json
+++ b/package.json
@@ -7,11 +7,26 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "devDependencies": {
+    "husky": "^0.14.3",
+    "jest": "^22.4.3",
+    "prettier": "^1.12.1",
     "rollup": "^0.58.1",
     "rollup-plugin-typescript": "^0.8.1",
-    "typescript": "^2.8.3",
-    "husky": "^0.14.3",
-    "prettier": "^1.12.1"
+    "ts-jest": "^22.4.4",
+    "typescript": "^2.8.3"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "/__tests__/.*\\.(test|spec)\\.[tj]sx?$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json"
+    ]
   },
   "scripts": {
     "precommit": "node ./build/scripts/precommit.js; ./node_modules/rollup/bin/rollup -c; git add ./dist;",
