--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
   "dependencies": {
-    "chevrotain": "3.0.1",
-    "tslint": "^5.9.1"
+    "chevrotain": "3.0.1"
   },
   "name": "millan",
   "description": "The (Star)dog Whisperer (node.js-based parsers for Stardog)",
   "version": "1.0.0",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "devDependencies": {
     "@types/jest": "^22.2.3",
+    "@types/node": "^9.6.6",
     "husky": "^0.14.3",
     "jest": "^22.4.3",
     "prettier": "^1.12.1",
-    "rollup": "^0.58.1",
-    "rollup-plugin-typescript": "^0.8.1",
     "ts-jest": "^22.4.4",
+    "tslint": "^5.9.1",
     "typescript": "^2.8.3"
   },
   "scripts": {
-    "precommit": "node ./build/scripts/precommit.js; ./node_modules/rollup/bin/rollup -c; git add ./dist;",
+    "precommit": "node ./build/scripts/precommit.js; ./node_modules/typescript/bin/tsc; git add ./dist;",
     "test": "./node_modules/.bin/jest"
   },
   "repository": {
