--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,9 @@
     "experimentalDecorators": true,
     "stripInternal": true,
     "outDir": "./dist",
-    "declarationDir": "./dist",
-    "lib": ["es2015", "dom"],
+    "lib": ["es2016", "dom"],
     "jsx": "react",
+    "baseUrl": ".",
     "paths": {
       "*": [
         "src/*"
