change paths spec tokens to mirror update spec tokens, add circle config, remove keywords enum

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,12 +5,12 @@
     "noImplicitAny": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "sourceMap": true,
     "declaration": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "stripInternal": true,
     "outDir": "./dist",
+    "declarationDir": "./dist/types",
     "lib": ["es2016", "dom"],
     "jsx": "react",
     "baseUrl": ".",
