--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "The (Star)dog Whisperer (node.js-based parsers for Stardog)",
   "version": "1.0.0",
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "types": "dist/types/index.d.ts",
   "devDependencies": {
     "@types/jest": "^22.2.3",
     "@types/node": "^9.6.6",
