--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
-    "chevrotain": "3.0.1",
-    "to-unicode": "^1.0.2"
+    "chevrotain": "3.0.1"
   },
   "name": "millan",
   "description": "The (Star)dog Whisperer (node.js-based parsers for Stardog)",
