--- a/package.json
+++ b/package.json
@@ -1,19 +1,59 @@
 {
   "name": "millan",
-  "description": "The (Star)dog Whisperer (node.js-based parsers for Stardog)",
-  "version": "1.2.1",
+  "version": "2.0.0",
+  "description": "The Stardog Whisperer (error-tolerant parsers for languages used with Stardog)",
+  "keywords": [
+    "stardog",
+    "sparql",
+    "rdf",
+    "turtle",
+    "query",
+    "knowledge graph",
+    "linked data",
+    "semantic web"
+  ],
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "browser": "dist/index.umd.js",
   "types": "dist/types/index.d.ts",
+  "files": [
+    "dist/",
+    "docs/"
+  ],
+  "author": {
+    "name": "Stardog Union",
+    "url": "https://stardog.com"
+  },
+  "license": "Apache-2.0",
+  "contributors": [
+    {
+      "name": "Jason Rogers",
+      "email": "jason@stardog.com"
+    },
+    {
+      "name": "Matt Scandalis",
+      "email": "scandalis.matthew@gmail.com"
+    },
+    {
+      "name": "Ty Soehngen",
+      "email": "ty@stardog.com"
+    },
+    {
+      "name": "Sandra Gonzales",
+      "email": "sandy@stardog.com"
+    }
+  ],
   "dependencies": {
     "chevrotain": "3.0.1"
   },
   "devDependencies": {
     "@types/jest": "^22.2.3",
     "@types/node": "^9.6.6",
+    "chalk": "^2.4.1",
+    "del": "^3.0.0",
     "husky": "^0.14.3",
     "jest": "^22.4.3",
+    "lint-staged": "^8.1.0",
     "prettier": "^1.12.1",
     "rollup": "^0.67.4",
     "rollup-plugin-commonjs": "^9.2.0",
@@ -22,20 +62,36 @@
     "rollup-plugin-typescript2": "^0.18.0",
     "ts-jest": "^22.4.4",
     "tslint": "^5.9.1",
-    "typescript": "^2.8.3"
+    "tslint-config-airbnb": "^5.11.1",
+    "tslint-config-prettier": "^1.17.0",
+    "typedoc": "^0.13.0",
+    "typescript": "^2.8.3",
+    "watch": "^1.0.2"
+  },
+  "engines": {
+    "node": ">=8.0.0"
   },
   "scripts": {
-    "precommit": "node ./build/scripts/precommit.js",
-    "test": "jest",
-    "build": "rollup -c",
-    "dev": "rollup -cw"
+    "precommit": "lint-staged",
+    "lint": "tslint --project tsconfig.json",
+    "test": "yarn lint && jest",
+    "build": "yarn test && node ./build/scripts/build.js",
+    "dev": "watch 'yarn build' ./src",
+    "format": "prettier 'src/**/*.[tj]s' -- write",
+    "docs": "typedoc --exclude '__tests__/**/*' --target ES5  --mode file --out ./docs ./src"
+  },
+  "lint-staged": {
+    "linters": {
+      "src/**/*.[tj]s": [
+        "prettier --write",
+        "git add"
+      ]
+    }
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/stardog-union/millan.git"
   },
-  "author": "Stardog Union",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/stardog-union/millan/issues"
   },
