--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "linked data",
     "semantic web"
   ],
-  "main": "dist/index.js",
-  "module": "dist/index.esm.js",
-  "browser": "dist/index.umd.js",
+  "main": "dist/millan.js",
   "types": "dist/types/index.d.ts",
   "files": [
     "dist/",
@@ -51,22 +49,24 @@
     "@types/node": "^9.6.6",
     "chalk": "^2.4.1",
     "del": "^3.0.0",
+    "fork-ts-checker-webpack-plugin": "^0.5.2",
     "husky": "^0.14.3",
     "jest": "^22.4.3",
     "lint-staged": "^8.1.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.12.1",
-    "rollup": "^0.67.4",
-    "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-terser": "^3.0.0",
-    "rollup-plugin-typescript2": "^0.18.0",
+    "terser-webpack-plugin": "^1.1.0",
     "ts-jest": "^22.4.4",
+    "ts-loader": "^5.3.1",
     "tslint": "^5.9.1",
     "tslint-config-airbnb": "^5.11.1",
     "tslint-config-prettier": "^1.17.0",
+    "tslint-loader": "^3.5.4",
     "typedoc": "^0.13.0",
     "typescript": "^2.8.3",
-    "watch": "^1.0.2"
+    "watch": "^1.0.2",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2"
   },
   "engines": {
     "node": ">=8.0.0"
@@ -75,10 +75,12 @@
     "precommit": "lint-staged",
     "lint": "tslint --project tsconfig.json",
     "test": "yarn lint && jest",
-    "build": "yarn test && node ./build/scripts/build.js",
-    "dev": "watch 'yarn build' ./src",
+    "pack": "webpack",
+    "build": "run-s test pack types",
+    "dev": "webpack -w",
     "format": "prettier 'src/**/*.[tj]s' -- write",
-    "docs": "typedoc --exclude '__tests__/**/*' --target ES5  --mode file --out ./docs ./src"
+    "docs": "typedoc --exclude '__tests__/**/*' --target ES5  --mode file --out ./docs ./src",
+    "types": "tsc --emitDeclarationOnly"
   },
   "lint-staged": {
     "linters": {
