--- a/package.json
+++ b/package.json
@@ -97,8 +97,5 @@
   "bugs": {
     "url": "https://github.com/stardog-union/millan/issues"
   },
-  "homepage": "https://github.com/stardog-union/millan#readme",
-  "publishConfig": {
-    "registry": "https://complexible.jfrog.io/complexible/api/npm/stardog-npm-virtual/"
-  }
+  "homepage": "https://github.com/stardog-union/millan#readme"
 }
