--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "query",
     "knowledge graph",
     "linked data",
-    "semantic web"
+    "semantic web",
+    "rules"
   ],
   "main": "dist/millan.js",
   "types": "dist/types/index.d.ts",
@@ -42,10 +43,12 @@
     }
   ],
   "dependencies": {
-    "chevrotain": "3.0.1"
+    "chevrotain": "3.0.1",
+    "lodash.uniqby": "^4.7.0"
   },
   "devDependencies": {
     "@types/jest": "^22.2.3",
+    "@types/lodash.uniqby": "^4.7.4",
     "@types/node": "^9.6.6",
     "chalk": "^2.4.1",
     "del": "^3.0.0",
@@ -58,12 +61,12 @@
     "terser-webpack-plugin": "^1.1.0",
     "ts-jest": "^22.4.4",
     "ts-loader": "^5.3.1",
-    "tslint": "^5.9.1",
+    "tslint": "^5.12.1",
     "tslint-config-airbnb": "^5.11.1",
     "tslint-config-prettier": "^1.17.0",
     "tslint-loader": "^3.5.4",
     "typedoc": "^0.13.0",
-    "typescript": "^2.8.3",
+    "typescript": "^3.2.4",
     "watch": "^1.0.2",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2"
