--- a/package.json
+++ b/package.json
@@ -47,12 +47,10 @@
     }
   ],
   "dependencies": {
-    "chevrotain": "3.0.1",
-    "lodash.uniqby": "^4.7.0"
+    "chevrotain": "3.0.1"
   },
   "devDependencies": {
     "@types/jest": "^22.2.3",
-    "@types/lodash.uniqby": "^4.7.4",
     "@types/node": "^9.6.6",
     "chalk": "^2.4.1",
     "del": "^3.0.0",
@@ -60,6 +58,7 @@
     "husky": "^0.14.3",
     "jest": "^22.4.3",
     "lint-staged": "^8.1.0",
+    "memoize-one": "^5.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.12.1",
     "terser-webpack-plugin": "^1.1.0",
