--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     }
   ],
   "dependencies": {
-    "chevrotain": "3.0.1",
+    "chevrotain": "^4.3.1",
     "lodash.isequal": "^4.5.0"
   },
   "devDependencies": {
