--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     }
   ],
   "dependencies": {
-    "chevrotain": "^4.3.1",
+    "chevrotain": "^4.3.2",
+    "flatted": "^2.0.0",
     "lodash.isequal": "^4.5.0"
   },
   "devDependencies": {
