--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   ],
   "dependencies": {
     "chevrotain": "^4.3.3",
+    "escape-string-regexp": "^2.0.0",
     "lodash.isequal": "^4.5.0"
   },
   "devDependencies": {
