--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "linked data",
     "semantic web",
     "rules",
-    "shacl"
+    "shacl",
+    "graphql"
   ],
   "main": "dist/millan.js",
+  "browser": "dist/browser/millan.js",
   "types": "dist/types/index.d.ts",
   "files": [
     "dist/",
@@ -64,6 +66,7 @@
     "memoize-one": "^5.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.12.1",
+    "rimraf": "^2.6.3",
     "terser-webpack-plugin": "^1.1.0",
     "ts-jest": "^24.0.2",
     "ts-loader": "^5.3.1",
@@ -85,10 +88,10 @@
     "lint": "tslint --project tsconfig.json",
     "test": "yarn lint && jest",
     "pack": "webpack",
-    "build": "run-s test pack types",
+    "build": "rimraf ./dist && run-s test pack types",
     "dev": "webpack -w",
     "format": "prettier 'src/**/*.[tj]s' -- write",
-    "docs": "typedoc --exclude '__tests__/**/*' --target ES5  --mode file --out ./docs ./src",
+    "docs": "rimraf ./docs && typedoc --exclude '__tests__/**/*' --target ES5  --mode file --out ./docs ./src",
     "types": "tsc --emitDeclarationOnly"
   },
   "lint-staged": {
