--- a/package.json
+++ b/package.json
@@ -55,9 +55,10 @@
     }
   ],
   "dependencies": {
-    "chevrotain": "4.4.0",
+    "chevrotain": "4.7.0",
     "escape-string-regexp": "^2.0.0",
-    "lodash.isequal": "^4.5.0"
+    "lodash.isequal": "^4.5.0",
+    "xregexp": "^4.4.1"
   },
   "devDependencies": {
     "@types/jest": "^22.2.3",
