--- a/package.json
+++ b/package.json
@@ -57,8 +57,7 @@
   "dependencies": {
     "chevrotain": "4.7.0",
     "escape-string-regexp": "^2.0.0",
-    "lodash.isequal": "^4.5.0",
-    "xregexp": "^4.4.1"
+    "lodash.isequal": "^4.5.0"
   },
   "devDependencies": {
     "@types/jest": "^22.2.3",
