--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @alex-r-bigelow @anneeb @hasibhassan @jhartling @joshhk72 @mysticfalconvt @SpiralP
+* @alex-r-bigelow @anneeb @hasibhassan @joshhk72 @mysticfalconvt @SpiralP
